# cuda_prac

./: .gitignore  README.md  install_cuda_tookit_ubuntu16.sh
add/: a.out
cmake_build/: CMakeLists.txt  cuda.cu  main.cpp  main.cu
cublas_class_cpp_cmake/: CMakeLists.txt  README.md  class.cu  main.cpp
detour_class/: CMakeLists.txt  cmake.sh  detour.cu  main.cpp
extern_shared/: main.cu
transpose_1d/: main.cu
transpose_complex/: main.cu
zgemm/: CMakeLists.txt  main.cu
